themes/academicmin/assets/scss/custom.scss
/**
 * Colors
 */
$rachael: #b30000;
$smashing: #d33a2c; // smashing red
$jax: rgba(218,0,0,.85); // jaxlicious
// background: #20232a;
$whiteoff: whitesmoke;
$primary: $smashing;

/**
 * Font Family
 */
h1,h2,h3,h4,h5,h6,
.navbar-light a,
body {
  // reactjs.org
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif !important;
}

/**
 *
 */
h1,h2,h3,h4,h5,h6 {
  color: $primary;
}

/**
 * Main Menu
 */

 // Logo/brand
.navbar-light .navbar-brand {
  color: #fff;
  &:hover {
    color: $primary;
  }
}
// menu background
#navbar-main {
   background: $primary;
}
// menu links
#navbar-main .main-menu-item ul li .nav-link {
  color: white;
}
// menu links
.navbar .navbar-nav .nav-link {
  font-size: 24px;
  font-weight: 300 !important;
  &.active {
    font-weight: bold !important;
    color: white !important;
  }
}

/**
 * Hero Center
 */
.wg-hero-center {
  h1,h2,h3,h4,h5,h6,p,
  .cta-btns {
    text-align: center;
  }
  .hero-title {
    font-weight: 700;
  }
  .subtitle {
    padding-top: 20px;
    font-size: 30px;
  }
  .emphasize {
    padding-top: 0px;
    font-size: 28px;
  }
}

/**
 * Button
 */
.btn {
  border: none;
  border-radius: 0;
  background: $primary;
}
.btn-xlarge {
  padding: 1rem 1rem;
  font-size: 20px;
  line-height: 23px;
}

/**
 * Lists
 */
ul.list-checkmarks.small li {
  background-image: url(/static/img/check.png);
  background-repeat: no-repeat;
  background-position: left .3125rem;
  background-size: 1.25rem 1.875rem;
  padding: 0 0 .5rem 1.875rem;
  margin-bottom: .5rem;
  line-height: 1.125rem;
}

a, h3.article-title a:hover {
  color: $primary;
  text-decoration: none;
  transition: color 0.6s ease;
}
a {
  color: $primary;
  text-decoration: none;
  background-color: transparent;
}

/**
 * Docs
 */

// Sidebar
.docs-sidebar .docs-toc-item.active a,
.docs-sidebar .nav > .active:hover > a,
.docs-sidebar .nav > .active > a {
  font-weight: bold;
  color: $primary;
  background-color: transparent;
}
// secondary links
.docs-sidebar .nav > li > a:hover {
  color: $primary;
  text-decoration: none;
  background-color: transparent;
}
// primary links
.docs-toc-link:hover {
  color: $primary;
  text-decoration: none;
}

// Table of contents
#TableOfContents li a.active {
  color: $primary;
  font-weight: 700;
}
#TableOfContents li a:hover, .toc-top li a:hover {
  color: $primary;
  text-decoration: none;
}

